Add provides/conflicts to PKGBUILD

--- a/arch/PKGBUILD
+++ b/arch/PKGBUILD
@@ -5,6 +5,8 @@ pkgdesc='Create custom upload targets for the KDE Plasma 6 Share menu'
 arch=('x86_64')
 url='https://github.com/ostrich/plasma-share-uploader'
 license=('GPL3')
+provides=('plasma-share-uploader')
+conflicts=('plasma-share-uploader')
 depends=('qt6-base' 'purpose' 'kcoreaddons' 'knotifications')
 makedepends=('cmake' 'python')
 source=('git+https://github.com/ostrich/plasma-share-uploader.git')
