--- a/arch/PKGBUILD
+++ b/arch/PKGBUILD
@@ -8,7 +8,7 @@ license=('GPL3')
 provides=('plasma-share-uploader')
 conflicts=('plasma-share-uploader')
 depends=('qt6-base' 'purpose' 'kcoreaddons' 'knotifications')
-makedepends=('cmake' 'python')
+makedepends=('cmake' 'git' 'python')
 source=('git+https://github.com/ostrich/plasma-share-uploader.git')
 sha256sums=('SKIP')
 
